openpearl-code/testsuite/must_not_compile/00_basics/001_no_module_statement.check
PROBLEM;
!!!!! BEGIN
      ^
ERROR : Syntax error :mismatched input 'PROBLEM' expecting 'MODULE'
!!!!! END
MODEND;
